# woStrategy

./: .gitignore  README.md  pyproject.toml
doc/: CODE_STATUS_QUO.md
doc/assets/: race_performance_weight_predict_2026_1-7_mercedes_plus5kg.csv  race_performance_weight_predict_2026_1-7_mercedes_plus5kg_plot_data.csv  race_performance_weight_predict_2026_1-8_mercedes_plus5kg.csv  race_performance_weight_predict_2026_1-8_mercedes_plus5kg_plot_data.csv  tyre_strategy_summary_2026_6_R_chinese.csv  tyre_strategy_summary_2026_6_R_english.csv
src/wostrategy/: __init__.py  utils.py
src/wostrategy/algorithm/: __init__.py  monte_carlo_race_performance.py  sampling.py
src/wostrategy/analysis/: __init__.py  fuel_consumption.py  long_run_performance.py  push_laps.py  quali_performance.py  race_performance_review.py  track_evolution.py  tyre_degragation.py
src/wostrategy/core/: __init__.py  session.py  session_loader.py  telemetry_loader.py
src/wostrategy/model/: __init__.py  fuel_consumption.py  long_run_performance.py  track_evolution.py  tyre_degragation.py
src/wostrategy/plots/: __init__.py  long_run_performance.py  quali_performance.py  race_labels.py  race_performance.py  style_maps.py  telemetry.py  track_development.py
src/wostrategy/script/: __init__.py  export_telemetry_cache_csv.py  (+10 more)
tests/: test_clean_lap_track_development.py  test_pure_lap_time_trace.py  test_quali_performance_tracker.py  test_race_performance_review.py  test_race_performance_weight_predict.py  test_sampling.py  test_session.py  test_telemetry_loader.py  test_tyre_strategy_summary.py
(+14 files in other folders)
