[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wostrategy"
version = "0.1.0"
description = "Formula 1 strategy analysis tools built on FastF1."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "zhxutong517@gmail.com" }
]
dependencies = [
  "fastf1",
  "matplotlib>=3.5.1,<4.0.0",
  "numpy>=1.23.1,<3.0.0",
  "pandas>=1.4.1,<3.0.0",
]

[project.urls]
Repository = "https://github.com/dr-wo/woStrategy"

[tool.hatch.build.targets.wheel]
packages = ["src/wostrategy"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
